k8s-specifications/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: result
  template:
    metadata:
      labels:
        app.kubernetes.io/name: result
    spec:
      containers:
        - image: dockersamples/examplevotingapp_result
          name: result
          ports:
            - containerPort: 80
              name: result
