k8s-specifications/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - image: dockersamples/examplevotingapp_worker
          name: worker
          volumeMounts:
            - name: backup-api-secret-vol
              mountPath: /etc/secrets
              readOnly: true
        - name: AUTH_TOKEN_API
          valueFrom:
            secretKeyRef:
              name: auth-token-api
              key: AUTH_TOKEN_API
      volumes:
        - name: backup-api-secret-vol
          secret:
            secretName: backup-api-secret
