k8s-specifications/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  name: result-service
spec:
  type: ClusterIP
  ports:
    - name: "result-service"
      port: 80
      targetPort: 80
  selector:
    app: result
